--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,12 @@
     "require": {
         "php": "^8.3",
         "filament/filament": "^3.2",
+        "hasnayeen/themes": "^3.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^7.2",
+        "z3d0x/filament-logger": "^0.7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
